_assets/stylesheets/styles.css
body, html,
#page-tabs,
#page-tabs li,
#markdown-toc ul {
    margin: 0;
    list-style: none;
    padding: 0;
}

body, html {
    min-height: 100%;
}

html {
    padding-top: 79px;
}

body {
    background-color: #fff;
    color: #555;
    font: 400 14px Arial, Helvetica, sans-serif;
}

a img {
    border-width: 0;
}

p code, li code {
    font-weight: 700;
    color: #000;
}

pre code {
    background: transparent;
}

header,
nav,
section,
article, aside, footer {
   display:block;
}

code, em {
  font-family: "Roboto Mono", "Ubuntu Mono", "Consolas", "Monaco", monospace;
}

/* Header */

#page-header {
    position: fixed;
    top: 0;
    width: 100%;
    font-size: 12px;
    z-index: 100;
}

/* adjust anchors for fixed header*/
:target:before {
    content: "";
    display: block;
    height: 85px;
    margin: -85px 0 0;
}

#page-header:after {
    display: block;
    content: "";
    clear: both;
}

#page-header a {
    text-decoration: none;
}

#page-edit-link {
    transition: width .2s linear .3s;
    position: absolute;
    z-index: 10;
    right: 36px;
    top: 70px;
    width: 26px;
    height: 17px;
    margin: 0;
    padding: 9px 10px 10px 0;
    text-decoration: none;
    text-align: center;
    border-radius: 0;
    background-color: #fff;
    color: #787878;
    white-space: nowrap;
    overflow: hidden;
    border: 1px solid #e8ebef;
    border-radius: 20px;
}

#page-edit-link span {
    padding: 0 8px 0 10px;
}

#page-edit-link:hover {
    transition: width .2s linear .3s;
    width: 130px;
    color: #000;
}

#logo-bar {
    float: left;
    margin-top: 1.617em;
    margin-bottom: 1.217em;
    margin-left: 1.833em;
}

.nav-buttons {
    float: right;
    margin-top: .92em;
}

#page-header a.btn {
    margin-left: .3em;
}

/* Topic navigation */

#page-nav {
    position: fixed;
    top: 79px;
    bottom: 0;
    left: 0;
    width: 18%;
    overflow: auto;
    background: #fefefe;
    border-right: 1px solid #e8ebef;
    z-index: 1;
    -webkit-overflow-scrolling: touch;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none
}

#page-nav .k-item>.k-group {
    /* simplifies scroll positioning */
    position: static;
}

/* Table of contents */

#markdown-toc {
    border-bottom: 1px solid #ebecee;
    position: fixed;
    background-color: #fff;
    top: 79px;
    z-index: 5;
    right: 0;
    font-size: 12px;
    padding-left: 5.8em;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
}

#markdown-toc > ul > li {
    display: inline-block;
    position: relative;
}

#markdown-toc li > ul {
    position: absolute;
    max-height: 400px;
    width: 500px;
    overflow: auto;
    background: #fff;
    box-shadow: 0 0 6px 1px rgba(0,0,0,0.2);
    padding: 1em 0;
}

#markdown-toc a {
    padding: 0 14px;
    text-decoration: none;
    line-height: 1.8em;
}

#markdown-toc a:hover {
    text-decoration: underline;
}

#markdown-toc code,
#markdown-toc em {
    display: none;
}

#markdown-toc .section > a {
    line-height: 50px;
    font-size: 1.1em;
    font-weight: bold;
    display: inline-block;
    padding-right: 30px;
    background: transparent url(../images/arrow.png) 90% 50% no-repeat;
}

#markdown-toc .section > a:hover {
    background-color: #f5f7f8;
    text-decoration: none;
}

#markdown-toc .section > a {
    color: #e50870;
}

/* Article pages */

#page-inner-content {
    position: relative;
    margin: 0;
}

#page-inner-content:after {
    content: " ";
    font-size: 0;
    line-height: 0;
    clear: both;
    display: block;
}

#page-article {
    background-color: #ffffff;
    line-height: 1.5;
    padding: 30px 0 0;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -webkit-overflow-scrolling: touch;
    font-family: Roboto, Helvetica, Arial, sans-serif;
    padding-left: 18%;
    padding-right: 2em;
    max-width: 100em;
}

#markdown-toc {
    left: 18%;
}

#page-article article {
    max-width: 930px;
    margin: 0 1em 4em 6em;
}

#page-article img {
    display: block;
    max-width: 100%;
}

a,
p a code,
li a code {
    color: #1976d2;
    text-decoration: none;
}

a:hover,
p a:hover code,
li a:hover code {
    color: #1565c0;
    text-decoration: underline;
}

h1,h2,h3,h4,h5,h6,
h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
    color: #000;
    text-decoration: none;
    letter-spacing: -0.04em;
}

h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
    padding-left: 25px;
    margin-left: -25px;
}

h1 a:hover, h2 a:hover, h3 a:hover,
h4 a:hover, h5 a:hover, h6 a:hover {
    text-decoration: none;
    background: transparent url(../images/anchor.png) no-repeat 0 50%;
}

h1 a.type-link, h1 a.type-link:hover,
h3 a.type-link, h3 a.type-link:hover,
h5 a.type-link, h5 a.type-link:hover {
    background: none;
    padding: 0;
    margin: 0;
}

h1 span.type-link {
    display: block;
    font-size: 12px;
}

h1 span.type-link a {
    color: #666;
}

a.type-link {
    text-decoration: none;
}

a.type-link:hover {
    background: none;
    padding: 0;
    margin: 0;
}

a.type-link code {
    color: #1976d2;
    font-size: .9em;
}

p a.type-link code {
    font-size: 1em;
}

a.type-link:hover code,
h1 span.type-link a:hover {
    color: #1565c0;
}

/* Headings */
h1,h2,h3,h4,h5,h6 {
    font-weight: 400;
    line-height: 1.2em;
    margin-top: 30px;
    margin-bottom: 12px;
}
h1 {
    font-size: 34px;
}

h2 {
    font-size: 26px;
    font-weight: 500;
    margin-top: 42px;
}

h3 {
    font-size: 18px;
    font-weight: 500;
}

h4 {
    font-size: 16px;
    font-weight: 500;
}

h5 {
    font-size: 15px;
    font-weight: 500;
}

h6 {
    font-size: 12px;
    text-transform: uppercase;
    font-weight: 700;
}

#markdown-toc + #page-article {
    /* adjust for ToC fixed positioning */
    padding-top: 80px;
}
/* ... */

